Change : Main visual and front section image object fit(IE11, Edge) Change : Post navigation font size Fixed : Footer align(IE11, Edge)

--- a/main.css
+++ b/main.css
@@ -2322,20 +2322,27 @@ body.scrolled #masthead {
   -webkit-transform: translate3d(0, 0, 0);
 }
 .main-visual img {
-  opacity: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  object-fit: cover;
   display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: auto;
+  min-height: 100%;
+  min-width: 100%;
+  opacity: 0;
+  object-fit: cover;
   transition: opacity 600ms linear;
+  transform: translateX(-50%) translateY(-50%);
 }
 .main-visual img.imgloaded {
   opacity: 1;
 }
 .main-visual img.img-placeholder {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   opacity: 1;
   transform: scale(1.08);
 }
@@ -2458,6 +2465,16 @@ body.scrolled #masthead {
   margin: 0 auto;
 }
 
+@supports (object-fit: cover) {
+  .main-visual img, .front-page-section img {
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transform: none;
+  }
+}
 /***********************
 * Front Page
 ************************/
@@ -2472,21 +2489,28 @@ body.scrolled #masthead {
   -webkit-transform: translate3d(0, 0, 0);
 }
 .front-page-section img {
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-  opacity: 0;
-  transition: opacity 1s ease;
   display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: auto;
+  min-height: 100%;
+  min-width: 100%;
+  opacity: 0;
+  object-fit: cover;
+  transition: opacity 1s ease;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: -1;
 }
 .front-page-section img.imgloaded {
   opacity: 1;
 }
 .front-page-section img.img-placeholder {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
   opacity: 1;
   transform: scale(1.08);
 }
@@ -2583,9 +2607,9 @@ body.scrolled #masthead {
   padding: 0;
 }
 #footer .wrap .footer-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  /*			display: flex;
+  			align-items: center;
+  			justify-content: center;*/
 }
 #footer .wrap .footer-content .footer-inner {
   padding: 1.5rem 0;
@@ -3247,13 +3271,13 @@ aside.sidebar ul li a, aside.sidebar ol li a {
 * Post Navigation
 ************************/
 .post-navigation {
-  font-size: 1rem;
+  font-size: 0.85rem;
   margin-bottom: 1.5rem;
   line-height: 1.86;
 }
 .post-navigation .nav-links {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 .post-navigation .nav-links a {
   display: flex;
@@ -3263,7 +3287,7 @@ aside.sidebar ul li a, aside.sidebar ol li a {
 }
 .post-navigation .nav-links i {
   display: inline;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
 }
 .post-navigation .nav-links .nav-previous {
   justify-content: flex-start;
@@ -3285,7 +3309,7 @@ aside.sidebar ul li a, aside.sidebar ol li a {
   margin-left: 0.5rem;
 }
 .post-navigation .nav-links div {
-  flex-basis: 50%;
+  flex-basis: 48%;
   display: flex;
   word-wrap: break-word;
 }
@@ -4615,9 +4639,6 @@ i.icomoon {
   /***********************
   * Post Navigation
   ************************/
-  .post-navigation {
-    font-size: 0.85rem;
-  }
   .post-navigation .nav-links {
     display: block;
   }
